deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-deploy
  namespace: default
  labels:
    app: python
spec:
  replicas: 2
  selector:
    matchLabels:
      app: python
  template:
    metadata:
      labels:
        app: python
    spec:
      containers:
      - name: python-container
        image: pengbai/docker-supermario
        command: ["/bin/bash"]
        args: ["-c", "python3 app.py"]
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
      nodeSelector:
        kubernetes: test-node
---
apiVersion: v1
kind: Service
metadata:
  name: python-svc
  namespace: default
spec:
  selector:
    app: python
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
